# crush

./: .gitignore  .gitmodules  Knitfile  README.md  crush.core  dump-firmware.sh  fusesoc.conf  lint_waiver.vlt  memory.gtkw  requirements.in  requirements.txt  run_sim.sh  setup_ubuntu2204.sh
.github/workflows/: main.yaml  main.yml
boot_fw/: CMakeLists.txt  TC-crush.cmake  boot.S  crush-boot.ld
bug-reproduce/: .gitignore  command.sh  crush_0.0.1.json
data/: verilator_waiver.vlt
doc/: .~lock.Implementation progress.ods#  Implementation progress.ods
docker/: Dockerfile
freertos/app/: CMakeLists.txt  TC-crush.cmake  crush.ld
freertos/app/freertos_config/: CMakeLists.txt  string.c
freertos/app/freertos_config/include/: FreeRTOSConfig.h  stdint.h  string.h
freertos/app/src/: hal.c  main.c  start.c
fw/: CMakeLists.txt  TC-crush.cmake  crush.ld  hal.c  hal.h  main.c  start.c
fw/binary/: crush-blinky.data
fw/c/: TC-crush.cmake  hal.h  start.S
fw/rust/: Cargo.toml  build.sh  crush.ld
fw/rust/.cargo/: config.toml
fw/rust/binary/: crush-blinky.data
fw/rust/src/: hal.rs  main.rs  start.S  start.rs
rtl/: alu.v  inst_immediate_decode.v
rtl/cpu/: alu.v  cpu.v  inst_decode_registers.v  inst_immediate_decode.v  mtimer.v  params.vh  program_counter.v  registers.v
rtl/soc/: flash.v  gpio.v  memory.v  memory_ice40_spram.v  memory_ice40_spram_wb.v  memory_infer.v  spi.v  top.v  top_freertos.v
script/: compliance.sh  init.sh
sim/: alu.v  control.v  cpu.v  cpu_freertos_tb.v  cpu_tb.v  csr_tb.v  fatal_assert.vh  flash_emulator.v  inst_immediate_decode.v  load_store.v  load_store_tb.v  memory.v  mtimer_tb.v  sim_memory.v  test_util.sv  top_tb.v
tools/: cpu.gtkw  cpu2.gtkw  cpu_state_filter.txt  csr_tb.gtkw  empty-filter.py  load_store.gtkw  mtimer.gtkw  riscv-filter.py  test.sh  top.gtkw
tools/compliance/: README.md  config-ci.ini  config-quell-ci.ini  config.ini  config.ini.bak  log.txt  test_list.yaml
tools/compliance/crush/: crush_platform.yaml  riscof_crush.py
tools/compliance/crush/env/: link.ld  model_test.h
tools/compliance/dut-plugin/env/: model_test.h
tools/compliance/quell/: quell_isa.yaml  quell_platform.yaml  riscof_quell.py
tools/compliance/quell/env/: model_test.h
